buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:6.0.36'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
}

apply plugin: 'net.minecraftforge.gradle'

version = '1.0'
base.archivesName = 'modid'
group = 'net.create_nomad'

apply from: 'custom.gradle'
apply from: 'mcreator.gradle'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.20.1'
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                create_nomad {
                    source sourceSets.main
                }
            }
        }

        client {}
        server {}
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
apply from: 'mcreator.gradle'
